--- a/BRStyleSampler/BRStyleSampler/Base.lproj/Main.storyboard
+++ b/BRStyleSampler/BRStyleSampler/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                         <sections>
                             <tableViewSection id="oX0-m4-qxn">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="hYE-fA-KkG">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="hYE-fA-KkG" customClass="SimpleTableViewCell">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hYE-fA-KkG" id="ItS-ma-PU5">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -109,6 +109,9 @@
                                                 <constraint firstAttribute="centerY" secondItem="so8-cy-H6D" secondAttribute="centerY" id="Em3-Kh-Z9Y"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="so8-cy-H6D" id="Wnq-dq-Dx9"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
